# KAMOS-Chain

./: .gitignore  README.md  designdocs.md  setup.md
owner-memo/: TIPS.md  TODO.md  setup.md  test_add-trusted-nodes.md  test_authorize-specific-nodes.md
substrate-kamos-node/: customSpec.json  customSpecRaw.json
substrate-kamos-node/node/: Cargo.toml
substrate-kamos-node/node/src/: chain_spec.rs
substrate-kamos-node/runtime/: Cargo.toml
substrate-kamos-node/runtime/src/: kamos.rs  lib.rs
substrate-package-1.0/substrate-kamos/: Cargo.toml  README.md
substrate-package-1.0/substrate-kamos-ui/src/: app.jsx
substrate-package-1.0/substrate-kamos/runtime/: Cargo.toml
substrate-package-1.0/substrate-kamos/runtime/src/: kamostoken.rs  lib.rs
substrate-package-1.0/substrate-kamos/runtime/wasm/: Cargo.toml  build.sh
substrate-package-1.0/substrate-kamos/runtime/wasm/src/: lib.rs
substrate-package-1.0/substrate-kamos/scripts/: init.sh
substrate-package-1.0/substrate-kamos/src/: chain_spec.rs  main.rs  service.rs
